@startuml

title __DATAACCESSLAYER's Class Diagram__\n

  namespace DataAccessLayer {
    class DataAccessLayer.AbstractDAO {
        - type : Class<T>
        + AbstractDAO()
        + deleteById()
        + findAll()
        + findById()
        + insert()
        + updateOnId()
        # createObjects()
        # createSelectQuery()
        - createDeleteQuery()
        - createInsertQuery()
        - createSelectAllQuery()
        - createUpdateQuery()
        - readPoint()
    }
  }
  

  namespace DataAccessLayer {
    class DataAccessLayer.ConnectionBuilder {
        {static} - DBURL : String
        {static} - DRIVER : String
        {static} - LOGGER : Logger
        {static} - PASS : String
        {static} - USER : String
        {static} - instance : ConnectionBuilder
        {static} + close()
        {static} + close()
        {static} + close()
        {static} + getConnection()
        - ConnectionBuilder()
        - createConnection()
    }
  }
  

  namespace DataAccessLayer {
    class DataAccessLayer.ParcelDAO {
        + ParcelDAO()
        + getParcelsByAssignedPostmanID()
    }
  }
  

  namespace DataAccessLayer {
    class DataAccessLayer.UserDAO {
        + UserDAO()
        + getUserByUsername()
    }
  }
  

  DataAccessLayer.ParcelDAO -up-|> DataAccessLayer.AbstractDAO
  DataAccessLayer.UserDAO -up-|> DataAccessLayer.AbstractDAO


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
